--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "# Import necessary functions from your package\n",
+    "# Import necessary functions from package\n",
     "import vigilant_dev\n",
     "from vigilant_dev.data_processing import process_data, clean_text\n",
     "from vigilant_dev.model import text_to_vector\n",
@@ -187,7 +187,6 @@
     "from sklearn.decomposition import PCA\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Assuming 'vectors' is a list or array of your vectors\n",
     "pca = PCA(n_components=3)\n",
     "reduced_vectors = pca.fit_transform(vectors)\n",
     "\n",
@@ -220,57 +219,6 @@
    ],
    "source": [
     "reduced_vectors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Mime type rendering requires nbformat>=4.2.0 but it is not installed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 29\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Update layout for better visualization\u001b[39;00m\n\u001b[0;32m     20\u001b[0m fig\u001b[38;5;241m.\u001b[39mupdate_layout(\n\u001b[0;32m     21\u001b[0m     margin\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdict\u001b[39m(l\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, r\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, b\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, t\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m),\n\u001b[0;32m     22\u001b[0m     scene\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdict\u001b[39m(\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     26\u001b[0m     )\n\u001b[0;32m     27\u001b[0m )\n\u001b[1;32m---> 29\u001b[0m \u001b[43mfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Abbaa\\OneDrive\\Bureaublad\\Vigilant-Dev\\.venv\\lib\\site-packages\\plotly\\basedatatypes.py:3410\u001b[0m, in \u001b[0;36mBaseFigure.show\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   3377\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   3378\u001b[0m \u001b[38;5;124;03mShow a figure using either the default renderer(s) or the renderer(s)\u001b[39;00m\n\u001b[0;32m   3379\u001b[0m \u001b[38;5;124;03mspecified by the renderer argument\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3406\u001b[0m \u001b[38;5;124;03mNone\u001b[39;00m\n\u001b[0;32m   3407\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   3408\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpio\u001b[39;00m\n\u001b[1;32m-> 3410\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m pio\u001b[38;5;241m.\u001b[39mshow(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\Abbaa\\OneDrive\\Bureaublad\\Vigilant-Dev\\.venv\\lib\\site-packages\\plotly\\io\\_renderers.py:394\u001b[0m, in \u001b[0;36mshow\u001b[1;34m(fig, renderer, validate, **kwargs)\u001b[0m\n\u001b[0;32m    389\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    390\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMime type rendering requires ipython but it is not installed\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    391\u001b[0m         )\n\u001b[0;32m    393\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m nbformat \u001b[38;5;129;01mor\u001b[39;00m Version(nbformat\u001b[38;5;241m.\u001b[39m__version__) \u001b[38;5;241m<\u001b[39m Version(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m4.2.0\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m--> 394\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    395\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMime type rendering requires nbformat>=4.2.0 but it is not installed\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    396\u001b[0m         )\n\u001b[0;32m    398\u001b[0m     ipython_display\u001b[38;5;241m.\u001b[39mdisplay(bundle, raw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m    400\u001b[0m \u001b[38;5;66;03m# external renderers\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: Mime type rendering requires nbformat>=4.2.0 but it is not installed"
-     ]
-    }
-   ],
-   "source": [
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "# Assuming 'reduced_vectors' is your array of 3D coordinates\n",
-    "# 'descriptions' and 'links' are lists of course descriptions and URLs\n",
-    "\n",
-    "fig = go.Figure(data=[go.Scatter3d(\n",
-    "    x=reduced_vectors[:, 0],\n",
-    "    y=reduced_vectors[:, 1],\n",
-    "    z=reduced_vectors[:, 2],\n",
-    "    mode='markers',\n",
-    "    marker=dict(\n",
-    "        size=5,\n",
-    "        opacity=0.8,\n",
-    "    ),\n",
-    "    text=descriptions,  # This will be displayed on hover\n",
-    "    hoverinfo='text',  # Show only the text on hover\n",
-    ")])\n",
-    "\n",
-    "# Update layout for better visualization\n",
-    "fig.update_layout(\n",
-    "    margin=dict(l=0, r=0, b=0, t=0),\n",
-    "    scene=dict(\n",
-    "        xaxis_title='X Axis',\n",
-    "        yaxis_title='Y Axis',\n",
-    "        zaxis_title='Z Axis'\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "fig.show()\n"
    ]
   },
   {
