add cluster topic descriptions

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,40 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Abbaa\\OneDrive\\Bureaublad\\Vigilant-Dev\\.venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import necessary functions from package\n",
     "import vigilant_dev\n",
-    "from vigilant_dev.data_processing import process_data, clean_text\n",
+    "from vigilant_dev.data_processing import process_data, clean_text, extract_topics\n",
     "from vigilant_dev.model import text_to_vector\n",
     "from vigilant_dev.workflow import process_courses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "df, mapping = process_courses('test_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
