--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,15 +2,175 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\Abbaa\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Abbaa\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "c:\\Users\\Abbaa\\OneDrive\\Bureaublad\\Vigilant-Dev\\.venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Import necessary functions from package\n",
     "import vigilant_dev\n",
-    "from vigilant_dev.data_processing import process_data, clean_text, extract_topics\n",
+    "from vigilant_dev.data_processing import process_data, clean_text, extract_topics, markdown_files_to_df\n",
     "from vigilant_dev.model import text_to_vector\n",
-    "from vigilant_dev.workflow import process_courses"
+    "from vigilant_dev.workflow import process_courses\n",
+    "from sklearn.decomposition import PCA\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>description</th>\n",
+       "      <th>link</th>\n",
+       "      <th>filename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>How to build your own LLM</td>\n",
+       "      <td>Deep Learning, Large Language Models, Neural N...</td>\n",
+       "      <td>http://example.com/course/advanced-ml</td>\n",
+       "      <td>resource1.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Leadership and Team Management Skills</td>\n",
+       "      <td>Personal development, product owner, team buil...</td>\n",
+       "      <td>http://example.com/course/advanced-ml</td>\n",
+       "      <td>resource2.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Web Development</td>\n",
+       "      <td>Web Development with HTML, CSS, and JavaScript</td>\n",
+       "      <td>http://example.com/course/advanced-ml</td>\n",
+       "      <td>resource3.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Timeseries Forecasting</td>\n",
+       "      <td>timeseries forecasting, python, data science, ...</td>\n",
+       "      <td>http://example.com/course/advanced-ml</td>\n",
+       "      <td>resource4.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Introduction to Neural Nets</td>\n",
+       "      <td>neural nets, python, deep learning</td>\n",
+       "      <td>http://example.com/course/advanced-ml</td>\n",
+       "      <td>resource5.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Bayesian Modeling Methods</td>\n",
+       "      <td>Bayesian statistical modeling, python</td>\n",
+       "      <td>http://example.com/course/advanced-ml</td>\n",
+       "      <td>resource6.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>How to build an API</td>\n",
+       "      <td>API, Application Programming interface, softwa...</td>\n",
+       "      <td>http://example.com/course/advanced-ml</td>\n",
+       "      <td>resource7.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Using Generative AI</td>\n",
+       "      <td>using generative artifical intelligence, promp...</td>\n",
+       "      <td>http://example.com/course/advanced-ml</td>\n",
+       "      <td>resource8.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Soft Skills for Stakeholder Communication</td>\n",
+       "      <td>soft skills for business stakeholder communica...</td>\n",
+       "      <td>http://example.com/course/advanced-ml</td>\n",
+       "      <td>resource9.md</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       title  \\\n",
+       "0                  How to build your own LLM   \n",
+       "1      Leadership and Team Management Skills   \n",
+       "2                            Web Development   \n",
+       "3                     Timeseries Forecasting   \n",
+       "4                Introduction to Neural Nets   \n",
+       "5                  Bayesian Modeling Methods   \n",
+       "6                        How to build an API   \n",
+       "7                        Using Generative AI   \n",
+       "8  Soft Skills for Stakeholder Communication   \n",
+       "\n",
+       "                                         description  \\\n",
+       "0  Deep Learning, Large Language Models, Neural N...   \n",
+       "1  Personal development, product owner, team buil...   \n",
+       "2     Web Development with HTML, CSS, and JavaScript   \n",
+       "3  timeseries forecasting, python, data science, ...   \n",
+       "4                 neural nets, python, deep learning   \n",
+       "5              Bayesian statistical modeling, python   \n",
+       "6  API, Application Programming interface, softwa...   \n",
+       "7  using generative artifical intelligence, promp...   \n",
+       "8  soft skills for business stakeholder communica...   \n",
+       "\n",
+       "                                    link      filename  \n",
+       "0  http://example.com/course/advanced-ml  resource1.md  \n",
+       "1  http://example.com/course/advanced-ml  resource2.md  \n",
+       "2  http://example.com/course/advanced-ml  resource3.md  \n",
+       "3  http://example.com/course/advanced-ml  resource4.md  \n",
+       "4  http://example.com/course/advanced-ml  resource5.md  \n",
+       "5  http://example.com/course/advanced-ml  resource6.md  \n",
+       "6  http://example.com/course/advanced-ml  resource7.md  \n",
+       "7  http://example.com/course/advanced-ml  resource8.md  \n",
+       "8  http://example.com/course/advanced-ml  resource9.md  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_df"
    ]
   },
   {
